--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8090
 server.servlet.context-path=/api
 spring.datasource.url=jdbc:h2:file:~/data/school-registration
 spring.jpa.hibernate.ddl-auto=update
